Added units 3, 4, 5 and 6

--- a/unit_03-docker-architecture/slides/docker-compose.yml
+++ b/unit_03-docker-architecture/slides/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   revealjs:
     image: nbrown/revealjs:latest
 
-    container_name: installing_docker
+    container_name: docker_architecture
 
     stdin_open: true
     tty: true
