--- a/unit_04-the-container-lifecycle/slides/docker-compose.yml
+++ b/unit_04-the-container-lifecycle/slides/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   revealjs:
     image: nbrown/revealjs:latest
 
-    container_name: installing_docker
+    container_name: the_container_lifecycle
 
     stdin_open: true
     tty: true
