--- a/unit_05-container-utilities/slides/docker-compose.yml
+++ b/unit_05-container-utilities/slides/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   revealjs:
     image: nbrown/revealjs:latest
 
-    container_name: installing_docker
+    container_name: container_utilities
 
     stdin_open: true
     tty: true
