--- a/unit_06-working-with-docker-images/slides/docker-compose.yml
+++ b/unit_06-working-with-docker-images/slides/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   revealjs:
     image: nbrown/revealjs:latest
 
-    container_name: installing_docker
+    container_name: working_with_docker_images
 
     stdin_open: true
     tty: true
